syntax = "proto3";

package config;

option go_package = "github.com/Yudiz/ecommerce-go-config-service/proto";

service ConfigService {
  rpc GetConfig (GetConfigRequest) returns (GetConfigResponse);
}

message GetConfigRequest {
  string service_name = 1;
}

message GetConfigResponse {
  string config_json = 1;
}
